[gd_scene load_steps=3 format=3 uid="uid://c0e4n4sslg6r8"]

[ext_resource type="Script" path="res://scenes/game_over_menu/game_over_menu.gd" id="1_0t8jf"]
[ext_resource type="Theme" uid="uid://bub0krrjkgjvw" path="res://art/theme.tres" id="2_lc7d3"]

[node name="GameOverMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_0t8jf")

[node name="BackgroundOverlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.254902)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="GameOver" type="Label" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_lc7d3")
theme_override_font_sizes/font_size = 90
text = "Game Over
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 28
alignment = 1

[node name="RestartBtn" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_lc7d3")
theme_override_font_sizes/font_size = 35
text = "Restart"

[node name="QuitBtn" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_lc7d3")
theme_override_font_sizes/font_size = 35
text = "Quit To Main Menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/RestartBtn" to="." method="_on_restart_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
